--- a/marinovdesign/resources/css/main.css
+++ b/marinovdesign/resources/css/main.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
+/*  */
 body {
     font-family: "Poppins", sans-serif;
     font-size: 0.875rem;
@@ -197,4 +202,15 @@ html[data-bs-theme="dark"] .theme-toggle .fa-moon {
 
 html[data-bs-theme="light"] .theme-toggle .fa-sun {
     display: none;
+}
+
+/*  */
+
+.toggle-i {
+    transition: 0.3s ease;
+}
+
+.toggle-i .fa-angle-down.rotate {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease;
 }
